--- a/app/globals.css
+++ b/app/globals.css
@@ -46,9 +46,9 @@
     --custom-800: #1f2937;
     --custom-900: #111827;
 
-    --primary: #093bf6;
+    --primary: #a126e9;
     --secondary: #ea83fb;
-    --accent: #f83cd8;
+    --accent: #9763e7;
   }
 
   * {
@@ -56,7 +56,7 @@
   }
 
   body {
-    @apply bg-900 relative min-h-screen w-full font-quicksand text-lg text-gray-400;
+    @apply relative min-h-screen w-full bg-900 font-quicksand text-lg text-gray-400;
   }
 
   section {
