changed accent and secondary colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,8 +47,8 @@
     --custom-900: #111827;
 
     --primary: #a126e9;
-    --secondary: #ea83fb;
-    --accent: #9763e7;
+    --secondary: #d2f38b;
+    --accent: #59ee73;
   }
 
   * {
