changed accent and secondary colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,9 +46,9 @@
     --custom-800: #1f2937;
     --custom-900: #111827;
 
-    --primary: #a126e9;
+    --primary: #52ba9f;
     --secondary: #d2f38b;
-    --accent: #59ee73;
+    --accent: #66e4c4;
   }
 
   * {
