changed accent color

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,7 @@
 
     --primary: #093bf6;
     --secondary: #ea83fb;
-    --accent: #e22e75;
+    --accent: #a6a95f;
 
     --mobile-menu-clr: #70669a;
   }
