changed accent color

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,8 +47,8 @@
     --custom-900: #111827;
 
     --primary: #093bf6;
-    --secondary: #ea83fb;
-    --accent: #a6a95f;
+    --secondary: #d3d59b;
+    --accent: #d0d374;
 
     --mobile-menu-clr: #70669a;
   }
