changed accent color

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@
     --custom-800: #1f2937;
     --custom-900: #111827;
 
-    --primary: #093bf6;
+    --primary: #a6a95f;
     --secondary: #d3d59b;
     --accent: #d0d374;
 
