background-color for body, text and buttons changed

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,17 +37,18 @@
     --width: min(75ch, calc(100% - 0.5rem));
 
     /* background colors */
-    --custom-200: #e5e7eb;
-    --custom-300: #d1d5db;
-    --custom-400: #9ca3af;
-    --custom-500: #6b7280;
-    --custom-600: #4b5563;
-    --custom-700: #374151;
-    --custom-800: #1f2937;
-    --custom-900: #111827;
+    --custom-200: #e5e5e5;
+    --custom-300: #d4d4d4;
+    --custom-400: #a3a3a3;
+    --custom-500: #737373;
+    --custom-600: #525252;
+    --custom-700: #404040;
+    --custom-800: #262626;
+    --custom-900: #171717;
+    --custom-950: #0a0a0a;
 
     --bg-clr: #040D12;
-    --primary: #183D3D;
+    --primary: #1c25e7;
     --secondary: #5C8374;
     --accent: #5C8374;
 
@@ -59,7 +60,7 @@
   }
 
   body {
-    @apply relative min-h-screen w-full bg-bgClr font-quicksand text-lg text-[#93B1A6];
+    @apply relative min-h-screen w-full bg-900 font-quicksand text-lg text-400;
   }
 
   section {
