--- a/app/globals.css
+++ b/app/globals.css
@@ -27,8 +27,16 @@
 
   /* Ubuntu font style. */
   @font-face {
-    font-family: "Ubuntu";
-    src: url("./../public/fonts//Ubuntu-Bold.ttf") format("truetype");
+    font-family: "Montserrat";
+    src: url("./../public/fonts/Montserrat-SemiBold.ttf") format("truetype");
+    font-weight: 700;
+    font-display: swap;
+  }
+
+  /* Ubuntu font style. */
+  @font-face {
+    font-family: "Caveat";
+    src: url("./../public/fonts/Caveat-Medium.ttf") format("truetype");
     font-weight: 700;
     font-display: swap;
   }
