--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@
     font-display: swap;
   }
 
-  /* Ubuntu font style. */
+  /* Montserrat font style. */
   @font-face {
     font-family: "Montserrat";
     src: url("./../public/fonts/Montserrat-SemiBold.ttf") format("truetype");
@@ -33,7 +33,7 @@
     font-display: swap;
   }
 
-  /* Ubuntu font style. */
+  /* Caveat font style. */
   @font-face {
     font-family: "Caveat";
     src: url("./../public/fonts/Caveat-Medium.ttf") format("truetype");
