--- a/app/globals.css
+++ b/app/globals.css
@@ -57,8 +57,8 @@
 
     --bg-clr: #040d12;
     --primary: #1c25e7;
-    --secondary: #5c8374;
-    --accent: #5c8374;
+    --secondary: #f9bb6f;
+    --accent: #baf749;
 
     --mobile-menu-clr: #70669a;
   }
