changed bg-colors for light theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,9 +56,9 @@
     --custom-950: #0a0a0a;
 
     --bg-clr: #040d12;
-    --primary: #1c25e7;
-    --secondary: #f9bb6f;
-    --accent: #baf749;
+    --primary: #3476d7;
+    --secondary: #879af0;
+    --accent: #4e6df6;
 
     --mobile-menu-clr: #70669a;
   }
