changed bg-colors for light theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,8 +56,8 @@
     --custom-950: #0a0a0a;
 
     --bg-clr: #040d12;
-    --primary: #3476d7;
-    --secondary: #879af0;
+    --primary: #023047;
+    --secondary: #219ebc;
     --accent: #4e6df6;
 
     --mobile-menu-clr: #70669a;
