changed bg-colors for light theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,8 +57,8 @@
 
     --bg-clr: #040d12;
     --primary: #023047;
-    --secondary: #219ebc;
-    --accent: #4e6df6;
+    --secondary: #8ecae6;
+    --accent: #219ebc;
 
     --mobile-menu-clr: #70669a;
   }
