removed top padding

--- a/app/globals.css
+++ b/app/globals.css
@@ -138,9 +138,7 @@
     @apply text-4xl font-extrabold;
   }
   button,
-  a,
-  input,
-  textarea {
+  a {
     @apply focus-visible:scale-105 focus-visible:transform focus-visible:opacity-90 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:transition-all focus-visible:duration-500;
   }
 }
