--- a/app/globals.css
+++ b/app/globals.css
@@ -45,15 +45,15 @@
     --width: min(75ch, calc(100% - 0.5rem));
 
     /* background colors */
-    --custom-200: #e5e5e5;
-    --custom-300: #d4d4d4;
-    --custom-400: #a3a3a3;
-    --custom-500: #737373;
-    --custom-600: #525252;
-    --custom-700: #404040;
-    --custom-800: #262626;
-    --custom-900: #171717;
-    --custom-950: #0a0a0a;
+    --custom-200: #e2e8f0;
+    --custom-300: #cbd5e1;
+    --custom-400: #94a3b8;
+    --custom-500: #64748b;
+    --custom-600: #475569;
+    --custom-700: #334155;
+    --custom-800: #1e293b;
+    --custom-900: #0f172a;
+    --custom-950: #020617;
 
     --bg-clr: #040d12;
     --primary: #003049;
