--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,15 @@
     font-display: swap;
   }
 
+  /* Playwright font style. */
+  @font-face {
+    font-family: "Playwrite";
+    src: url("./../public/fonts/PlaywriteDEGrund-Regular.ttf")
+      format("truetype");
+    font-weight: 700;
+    font-display: swap;
+  }
+
   :root {
     --width: min(75ch, calc(100% - 0.5rem));
 
@@ -70,11 +79,11 @@
   }
 
   body {
-    @apply relative min-h-screen w-full bg-300 font-quicksand text-lg text-900 dark:bg-900 dark:text-400;
+    @apply relative min-h-screen bg-300 font-quicksand text-lg text-900 dark:bg-900 dark:text-400;
   }
 
   section {
-    @apply mx-auto max-w-3xl px-4;
+    @apply px-2 md:px-12;
   }
 }
 
